[metadata]
name = pytorch-check
author = Joel Eriksson
author_email = je@clevcode.org
description = Check PyTorch models for unsafe code
long_description = file:README.md
license_files = LICENSE
version = 1.0.1
url = https://github.com/clevcode/pytorch-check
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
  fickling
  colorama

[options.entry_points]
console_scripts =
  pytorch-check = pytorch_check.__main__:main
